--- a/busbook/templates/base.html
+++ b/busbook/templates/base.html
@@ -13,17 +13,17 @@
   <body>
       
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" >
 
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'booking:home' %}">BusBook</a>
+                <a class="navbar-brand" href="{% url 'booking:home' %}"><i class="fas fa-bus text-danger"></i> BusBook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{% url 'booking:home' %}">Home</a>
+                      <a class="nav-link active" aria-current="page" href="{% url 'booking:home' %}"><i class="fas fa-home"></i> Home</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
