--- a/busbook/templates/bususer/register.html
+++ b/busbook/templates/bususer/register.html
@@ -1,244 +1,164 @@
 {% extends 'base.html' %}
 
-{% block title%}BusBook Signup{% endblock%}
+
+{% block title%}BusBook Register{% endblock%}
 
 {% block navblock %}
 <style>
-
-
-.login-container {
+    body{
+  
+    background: #f6f9fc;
+}
+.form tr{
+    margin-bottom: 100px;
+}
+.account-block {
+    padding: 0;
+    background-image: url('https://images.unsplash.com/photo-1494515843206-f3117d3f51b7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YnVzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
     position: relative;
-    margin: 10% auto;
-    max-width: 400px;
 }
-
-.login-container .loginbox {
-    position: relative;
-    width: 340px !important;
-    height: auto !important;
-    padding: 0 0 20px 0;
-    -webkit-box-shadow: 0 0 14px rgba(0,0,0,.1);
-    -moz-box-shadow: 0 0 14px rgba(0,0,0,.1);
-    box-shadow: 0 0 14px rgba(0,0,0,.1);
-}
-
-.bg-white {
-    background-color: #fff !important;
-}
-
-.login-container .loginbox .loginbox-title {
-    position: relative;
-    text-align: center;
-    width: 100%;
-    height: 35px;
-    padding-top: 10px;
-    font-family: 'Lucida Sans','trebuchet MS',Arial,Helvetica;
-    font-size: 20px;
-    font-weight: normal;
-    color: #444;
-}
-
-.login-container .loginbox .loginbox-social {
-    padding: 0 10px 10px;
-    text-align: center;
-}
-
-.login-container .loginbox .loginbox-social .social-title {
-    font-size: 14px;
-    font-weight: 500;
-    color: #a9a9a9;
-    margin-top: 10px;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons {
-    height: 80px;
-    padding: 15px 35px;
-    text-align: center;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons .button-facebook {
-    float: left;
-    border: 2px solid #3b5998;
-    color: #3b5998;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-right: 30px;
-    background-color: #fff;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons .button-twitter {
-    float: left;
-    border: 2px solid #29c1f6;
-    color: #29c1f6;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-right: 30px;
-    background-color: #fff;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons .button-google  {
-    float: left;
-    border: 2px solid #ef4f1d;
-    color: #ef4f1d;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-right: 30px;
-    background-color: #fff;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons .button-facebook i {
-    font-size: 26px;
-    line-height: 50px;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons .button-twitter i {
-    font-size: 26px;
-    line-height: 50px;
-}
-
-.login-container .loginbox .loginbox-social .social-buttons .button-google i {
-    font-size: 26px;
-    line-height: 50px;
-}
-
-.login-container .loginbox .loginbox-or {
-    position: relative;
-    text-align: center;
-    height: 20px;
-}
-
-.login-container .loginbox .loginbox-or .or-line {
-    position: absolute;
-    height: 1px;
-    top: 10px;
-    left: 40px;
-    right: 40px;
-    background-color: #ccc;
-}
-
-.login-container .loginbox .loginbox-or .or {
+.account-block .overlay {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
     position: absolute;
     top: 0;
-    -lh-property: 0;
-    left: -webkit-calc(50% - 25px);
-    left: -moz-calc(50% - 25px);
-    left: calc(50% - 25px);
-    width: 50px;
-    height: 20px;
-    background-color: #fff;
-    color: #999;
-    margin: 0 auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.4);
 }
-
-.login-container .loginbox .loginbox-textbox {
-    padding: 10px 40px;
-}
-
-.login-container .loginbox .loginbox-textbox .form-control {
-    -webkit-border-radius: 3px !important;
-    -webkit-background-clip: padding-box !important;
-    -moz-border-radius: 3px !important;
-    -moz-background-clip: padding !important;
-    border-radius: 3px !important;
-    background-clip: padding-box !important;
-}
-
-.login-container .loginbox .loginbox-forgot {
-    padding-left: 40px;
-}
-
-.login-container .loginbox .loginbox-forgot a {
-    font-size: 11px;
-    color: #666;
-}
-
-.login-container .loginbox .loginbox-submit {
-    padding: 10px 40px;
-}
-
-.login-container .loginbox .loginbox-signup {
+.account-block .account-testimonial {
     text-align: center;
-    padding-top: 10px;
+    color: #fff;
+    position: absolute;
+    margin: 0 auto;
+    padding: 0 1.75rem;
+    bottom: 3rem;
+    left: 0;
+    right: 0;
 }
 
-.login-container .loginbox .loginbox-signup a {
-    font-size: 13px;
-    color: #666;
+.text-theme {
+    color: #5369f8 !important;
 }
 
-.login-container .logobox {
-    width: 340px !important;
-    height: 50px !important;
-    padding: 5px;
-    margin-top: 15px;
-    -webkit-box-shadow: 0 0 14px rgba(0,0,0,.1);
-    -moz-box-shadow: 0 0 14px rgba(0,0,0,.1);
-    box-shadow: 0 0 14px rgba(0,0,0,.1);
-    background-color: #fff;
-    text-align: left;
+.btn-theme {
+    background-color: #5369f8;
+    border-color: #5369f8;
+    color: #fff;
 }
 
 .helptext{
     display: none;
 }
+  
+
+
+
+
 
 </style>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="login-container animated fadeInDown bootstrap snippets bootdeys mt-5">
-        <div class="loginbox bg-white">
-            <div class="loginbox-title">SIGN UP</div>
-            <div class="loginbox-social">
-                <div class="social-title ">Make travel easy</div>
-                <div class="social-buttons">
-                    <a href="" class="button-facebook">
-                        <i class="social-icon fa fa-bus"></i>
-                    </a>
-                    <a href="" class="button-google">
-                        <i class="social-icon fas fa-smile-beam"></i>
-                    </a>
-                    <a href="" class="button-twitter">
-                        <i class="social-icon fa fa-wifi"></i>
-                    </a>
-                    
-                </div>
-            </div>
-            <div class="loginbox-or">
-                <div class="or-line"></div>
-                <div class="or">OR</div>
-            </div>
-            <div class="p-1">
-                <form action="" method="POST">
-                    <table class="table col-lg-12">
-                        {% csrf_token %}
-                        {{form.as_table}}
-        
-                    </table>
-                    <div class="loginbox-submit offset-3">
-                        <input type="submit" class="btn btn-primary" value="Register">
-                    </div>
-                </form>
-            </div>
 
-            
+
+    <div id="main-wrapper" class="container my-5 ">
+        <div class="row justify-content-center">
+            <div class="col-xl-10 ">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <div class="p-5">
+                                    {% for message in messages %} 
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
           
-            
-            <div class="loginbox-signup">
-                <a href="/">Already have an accoutn?</a>
+            <div class="col-lg-8 mx-auto">
+              <div
+                class="alert alert-success alert-dismissible fade show text-center"
+                role="alert"
+              >
+                <strong></strong>{{message}} 😀
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="Close"
+                ></button>
+              </div>
             </div>
+            {% endif %} {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR%}
+          
+            <div class="col-lg-8 mx-auto">
+              <div
+                class="alert alert-danger alert-dismissible fade show text-center"
+                role="alert"
+              >
+                <strong></strong> {{message}} 😶
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="Close"
+                ></button>
+              </div>
+            </div>
+            {% endif %} 
+            {% endfor %}
+
+
+
+                                    <div class="mb-5">
+                                        <h3 class="h4 font-weight-bold text-theme">Register</h3>
+                                    </div>
+    
+                                    <h6 class="h5 mb-0">Make your travel easy</h6>
+                                    <p class="text-muted mt-2 mb-5">Fill out the form to get registered.</p>
+    
+                                    <form method="POST">
+                                        <table class="form col-xl-10">
+                                            {% csrf_token %}
+                                            {{form.as_table}}
+                            
+                                        </table>
+                                      
+                                        <button type="submit" class="btn btn-theme mt-5">Sign up</button>
+                                    </form>
+                                </div>
+                            </div>
+    
+                            <div class="col-lg-6 d-none d-lg-inline-block">
+                                <div class="account-block rounded-right">
+                                    <div class="overlay rounded-right"></div>
+                                    <div class="account-testimonial">
+                                        <h4 class="text-white mb-4">Making your trip easy and comfortable!</h4>
+                                        
+                                        <p>-BusBook</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+    
+                    </div>
+                    <!-- end card-body -->
+                </div>
+                <!-- end card -->
+    
+                <p class="text-muted text-center mt-3 mb-0">Already had an account? <a href="{% url 'bususer:login'%}" class="text-primary ml-1">Login</a></p>
+    
+                <!-- end row -->
+    
+            </div>
+            <!-- end col -->
         </div>
-        <div class="logobox">
-        </div>
+        <!-- Row -->
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-       
-        
   
-    </script>
 
 {% endblock %}
 </body>
